# org.barzensuit.xmpp

./: .gitignore  ChangeLog  Changelog  Makefile.am  README.md  configure.ac
glib/: .#stdint.in.h  .gitignore
glib/m4/: .gitignore  gnulib-cache.m4
inc/: bzenxmpp.h  bzenxmpp_help.h  bzenxmpp_main.h
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  bzenxmpp.pot  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po
src/: Makefile.am  bzenxmpp.c  bzenxmpp.pc.in  bzenxmpp_help.c  bzenxmpp_main.c
tests/: Makefile.am
